[serial] When a read is requested on posix platforms, try the read immediately.

On some posix platforms (e.g., OSX) the first read after a serial device is
opened may never complete. The problem is on these platforms the message loop
will not notify that a file descriptor is ready to read if it was in that state
when it was opened.

This fixed this problem by trying to perform a read immediately after it is requested.

BUG=618911

Review-Url: https://codereview.chromium.org/2057973002
Cr-Commit-Position: refs/heads/master@{#408467}

Former-commit-id: b09276a67a58e6aa0c23d8a052f0b7bd4c9ca668